# cw-flattener

./: .gitignore  Cargo.toml  README.md
demo/src/: contract.rs  lib.rs  test.rs  vulnerability.rs_bkup
src/: main.rs
